# SpeechForge

./: .gitignore  design_guidelines.md  env.example  package-lock.json  package.json  pyproject.toml  replit.md  start.sh
api/: main.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AppHeader.tsx  AudioPlayer.tsx  AudioSettings.tsx  RecordingControls.tsx  RequireAuth.tsx  TextInputPanel.tsx  TextTranslator.tsx  ThemeToggle.tsx  UserMenu.tsx  VoiceCard.tsx  VoiceCloneUpload.tsx  VoiceSelector.tsx
client/src/components/examples/: AudioPlayer.tsx  AudioSettings.tsx  RecordingControls.tsx  TextInputPanel.tsx  TextTranslator.tsx  VoiceCard.tsx  VoiceCloneUpload.tsx  VoiceSelector.tsx
client/src/hooks/: use-session.ts
client/src/lib/: queryClient.ts
client/src/pages/: AdminProfiles.tsx  Home.tsx  Login.tsx  Register.tsx  Studio.tsx
server/: auth.ts  db.ts  index.ts  routes.ts  storage.ts
server/types/: express-session.d.ts  memorystore.d.ts
shared/: schema.ts
