[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "elevenlabs>=2.22.0",
    "fastapi>=0.121.0",
    "google-cloud-texttospeech>=2.33.0",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
